src_old/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>ProjectCancelLeadTime__c</fullName>
        <description>A field that indicates the lead time to cancel the Project.</description>
        <formula>Retailer__r.JobCancelLeadTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The lead time to cancel the project.</inlineHelpText>
        <label>Project Cancel Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectCloseDate__c</fullName>
        <description>A field that indicates the close date and time for the Project.</description>
        <formula>if(ISPICKVAL(Status__c,&apos;Canceled&apos;), NULL ,EndDate__c+ProjectGracePeriodDuration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The close date and time for the project.</inlineHelpText>
        <label>Project Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectCost__c</fullName>
        <description>A field that indicates the cost of the Project.</description>
        <inlineHelpText>The cost of the project.</inlineHelpText>
        <label>Project Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectCycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A search field that indicates the cycle of the Project.</description>
        <inlineHelpText>Enter the cycle of the project.</inlineHelpText>
        <label>Project Cycle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RetailerAccount__c</field>
                <operation>equals</operation>
                <valueField>Cycle__c.RetailerAccount__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cycle__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectDescription__c</fullName>
        <description>An entry field that indicates the description of the Project.</description>
        <inlineHelpText>Enter the description of the project.</inlineHelpText>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectGracePeriodDuration__c</fullName>
        <description>A field that indicates the duration of the grace period for the Project.</description>
        <label>Project Grace Period Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectInstructions__c</fullName>
        <inlineHelpText>Detail scope of work for the entire project</inlineHelpText>
        <label>Project Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectLaunchDate__c</fullName>
        <description>A field that indicates the launch date for the Project</description>
        <inlineHelpText>The date the project becomes visible on execution platforms and fulfillment entities.</inlineHelpText>
        <label>Project Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <displayFormat>{YY}{MM}{DD}{000000}</displayFormat>
        <inlineHelpText>this is help text in design</inlineHelpText>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProjectOrigin__c</fullName>
        <label>Project Origin System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectPrice__c</fullName>
        <label>Project Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectRetailerName__c</fullName>
        <formula>Retailer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Retailer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRetailerONEHUBID__c</fullName>
        <label>Project Retailer One Hub ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectScheduleOptionCode__c</fullName>
        <description>Code that specifies the Schedule Option for a Project. Reference this field within APEX where functionality is determined based upon Schedule Option, such as who sets the Schedule Date for a specific Job. The Code should not be visible in page layouts for Users. Use the Project Schedule Option Name within Reporting and the Project Schedule Option within page layouts.</description>
        <formula>ProjectScheduleOption__r.Code__c</formula>
        <label>Project Schedule Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectScheduleOptionName__c</fullName>
        <formula>ProjectScheduleOption__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Schedule Option Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectScheduleOption__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Determines soft-dated or hard-dated scheduling of work</inlineHelpText>
        <label>Project Schedule Option</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ScheduleOption__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ScheduleOption__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectSeller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person that sold the Opportunity (if available)</inlineHelpText>
        <label>Project Seller</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>notEqual</operation>
                <value>Planning</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Seller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTypeName__c</fullName>
        <formula>ProjectType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Type</label>
        <referenceTo>ProjectType__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectWindow__c</fullName>
        <formula>TEXT(MONTH(StartDate__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(StartDate__c)) &amp; &quot;/&quot; &amp; TEXT(Year(StartDate__c)) &amp; &quot; - &quot; &amp; TEXT(MONTH(EndDate__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(EndDate__c)) &amp; &quot;/&quot; &amp; TEXT(Year(EndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Window</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotedTime__c</fullName>
        <label>Quoted Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RejectReason__c</fullName>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedTotalTime__c</fullName>
        <label>Total Time Reported</label>
        <summarizedField>ProjectService__c.ReportedTotalTime__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RequestedLocationsCount__c</fullName>
        <inlineHelpText>Number of locations requested for approval for the project, this number should match the # of Budgeted Locations in most cases.</inlineHelpText>
        <label>Requested Locations Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsibleForExecution__c</fullName>
        <label>Responsible For Execution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Execution Company</fullName>
                    <default>true</default>
                    <label>Execution Company</label>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetailerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inherited from Project Type, but can be edited. Retailer Account will determine the Category selections at the Project Service.</inlineHelpText>
        <label>Retailer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OneHubAccountType__c</field>
                <operation>equals</operation>
                <value>Retailer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchedulingOption__c</fullName>
        <label>Project Scheduling Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ProjectBuilder</fullName>
                    <label>Project Builder</label>
                </value>
                <value>
                    <fullName>ExecutionCompanySupervisoronly</fullName>
                    <label>Execution Company, Supervisor only</label>
                </value>
                <value>
                    <fullName>ExecutionCompanySupervisororRep</fullName>
                    <default>true</default>
                    <label>Execution Company, Supervisor or Rep</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServicModel__c</fullName>
        <formula>TEXT(ProjectType__r.ServiceModel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCount__c</fullName>
        <label>Service Count</label>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SkipValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SplitType__c</fullName>
        <description>A picklist that indicates if the project is to be a solo or split across multiple accounts.</description>
        <inlineHelpText>Select the split type for the project.</inlineHelpText>
        <label>Project Split Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Percentage (%)</fullName>
                </value>
                <value>
                    <fullName>Amount ($)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>An entry field that indicates the start date of the Project.</description>
        <inlineHelpText>The date available to start execution</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusComments__c</fullName>
        <description>Used to store Rejected or Canceled reasons</description>
        <label>Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusDisplay__c</fullName>
        <formula>IF(TEXT(Status__c)== null, &apos;Planning&apos;, TEXT(Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                    <default>true</default>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StoreCallTimeLimit__c</fullName>
        <description>Time in minutes that can be set to override the Total Estimated Minutes.</description>
        <inlineHelpText>Optionally set a time limit to override Total Estimated Minutes</inlineHelpText>
        <label>Store Call Time Limit (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAccountSplit__c</fullName>
        <label>TotalAccountSplit</label>
        <summarizedField>ProjectAccount__c.SplitValue__c</summarizedField>
        <summaryForeignKey>ProjectAccount__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalEstimatedMinutes__c</fullName>
        <description>Sum of estimated minutes across all services.</description>
        <inlineHelpText>Sum of Project Service minutes per rep</inlineHelpText>
        <label>Total Estimated Minutes</label>
        <summarizedField>ProjectService__c.EstimatedMinutes__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalTimeReported__c</fullName>
        <label>Depracated - Total Time Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateJobsFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show &quot;Create Jobs&quot; button in scheduled state when services are modified.</description>
        <label>Update Jobs Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdateSequence__c</fullName>
        <label>Update Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WorkType__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIV:US-CAO-760:SUN</fullName>
                </value>
                <value>
                    <fullName>DIV:US-CAO-760:CONT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectNumber__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>LocationTotalCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Booked</fullName>
        <active>true</active>
        <label>Booked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canceled</fullName>
        <active>true</active>
        <label>Canceled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <label>Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_Booked_Project_Record</fullName>
        <active>true</active>
        <label>Edit Booked Project Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ended</fullName>
        <active>true</active>
        <label>Ended</label>
    </recordTypes>
    <recordTypes>
        <fullName>InProgress</fullName>
        <active>true</active>
        <label>In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>Launched</fullName>
        <active>true</active>
        <label>Launched</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <label>Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planning</fullName>
        <active>true</active>
        <label>Planning</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Project_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(ProjectType__c)</errorConditionFormula>
        <errorMessage>Project Type Cannot be Changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_zero_Number_Of_Days</fullName>
        <active>true</active>
        <description>Do not allow a non zero number of days</description>
        <errorConditionFormula>NumberOfDays__c &lt;= 0</errorConditionFormula>
        <errorMessage>Number of Days has to be a number &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(EndDate__c)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Number_Of_Days_for_Non_Multi_Day</fullName>
        <active>true</active>
        <description>Number of Days cannot be more than 1 for a non multi day project type.</description>
        <errorConditionFormula>AND(ProjectType__r.AllowMultidays__c == false,  NumberOfDays__c &gt; 1)</errorConditionFormula>
        <errorDisplayField>NumberOfDays__c</errorDisplayField>
        <errorMessage>Number of Days cannot be more than 1 for a non multi day project type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MaximumOf10ThousandBudgetedLocations</fullName>
        <active>true</active>
        <description>A project can not have more than 9,500 Budgeted locations</description>
        <errorConditionFormula>BudgetedLocationsCount__c &gt;9500</errorConditionFormula>
        <errorMessage>A project can not have more than 9,500 Budgeted locations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MaximumOf10ThousandLocations</fullName>
        <active>true</active>
        <description>A project can not have more than 9,500 locations</description>
        <errorConditionFormula>LocationTotalCount__c &gt; 9500</errorConditionFormula>
        <errorMessage>A project can not have more than 9,500 locations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MultiDayProjectCannotbeExecutedByEC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(SkipValidationRules__c &lt;&gt; true, ProjectScheduleOptionCode__c == &apos;EC&apos;,  NumberOfDays__c &gt; 1)</errorConditionFormula>
        <errorMessage>A project cannot be both multi-day (‘Number of Days’&gt;1) and have a ‘Project Schedule Option’ set to ‘Execution Company will Schedule’. Please update the &apos;Number of Days&apos; or the ‘Project Schedule Option’ to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_grater_then_0</fullName>
        <active>true</active>
        <errorConditionFormula>BudgetedLocationsCount__c &lt;= 0</errorConditionFormula>
        <errorMessage># of Budgeted Locations must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only1AccountForSplitTypeSolo</fullName>
        <active>true</active>
        <description>Only allow 1 project account for split type of solo</description>
        <errorConditionFormula>ProjectAccountsCount__c &gt; 1 &amp;&amp; TEXT(SplitType__c) = &quot;Solo&quot; &amp;&amp; ISCHANGED(SplitType__c)</errorConditionFormula>
        <errorMessage>Project split type cannot be set to &apos;Solo&apos; until one or more accounts is deleted from the project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Scheduling_Option_chnage</fullName>
        <active>true</active>
        <description>Prevent scheduling option change for projects created from opportunity</description>
        <errorConditionFormula>OR(NOT(ISPICKVAL(Status__c,&quot;Planning&quot;))&amp;&amp; ISCHANGED( ProjectScheduleOption__c), (ISPICKVAL(Status__c,&apos;Planning&apos;) &amp;&amp; LocationTotalCount__c &gt; 0 &amp;&amp; ISCHANGED( ProjectScheduleOption__c) &amp;&amp; UPPER(ProjectScheduleOptionCode__c) == &apos;EC&apos; ))</errorConditionFormula>
        <errorDisplayField>ProjectScheduleOption__c</errorDisplayField>
        <errorMessage>Scheduling option can only be changed when the project is in Planning status. Also, when changing to EC, please make sure there are no locations. If there are locations please remove them and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectAccountPercentageLessThan100</fullName>
        <active>true</active>
        <description>Project accounts sum must be less than 100 %</description>
        <errorConditionFormula>AND(TEXT(SplitType__c)=&quot;Percentage (%)&quot;, AccountSplitSUM__c &gt; 100)</errorConditionFormula>
        <errorMessage>The split of project accounts does not add up to 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Grace_Period_Negative_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ProjectGracePeriodDuration__c &lt; 0</errorConditionFormula>
        <errorMessage>Project Grace Period cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Launch_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ProjectLaunchDate__c &gt;  StartDate__c</errorConditionFormula>
        <errorDisplayField>ProjectLaunchDate__c</errorDisplayField>
        <errorMessage>Project launch date cannot be greater than project start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Title_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Project Title is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_end_date_not_less_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(EndDate__c &lt; today(),OR(ISNEW(),ISCHANGED(EndDate__c)))</errorConditionFormula>
        <errorMessage>Start date cannot come after the end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_start_date_less_than_end_date</fullName>
        <active>true</active>
        <description>To check if Project start date is greater than end date.</description>
        <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
        <errorMessage>Project start date should not be greater than end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_start_date_not_less_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(StartDate__c &lt; today(),OR(ISNEW(),ISCHANGED(StartDate__c)))</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Project start  date cannot be less than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Field</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( Name )</errorConditionFormula>
        <errorMessage>Project Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheduled_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c, &quot;Planning&quot;)) &amp;&amp; IsExternalProject__c &lt;&gt; true &amp;&amp; EndDate__c &lt; PRIORVALUE(EndDate__c)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>You do not have the required access needed to make this project date change. Please reach out to your Client Operations Manager for assistance. Thank you!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheduled_Project_Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c, &quot;Planning&quot;)) &amp;&amp; IsExternalProject__c &lt;&gt; true &amp;&amp; StartDate__c &gt; PRIORVALUE(StartDate__c)</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>You do not have the required access needed to make this project date change.  Please reach out to your Client Operations Manager for assistance.  Thank you!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheduling_Option_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(ProjectScheduleOption__c)</errorConditionFormula>
        <errorMessage>Please choose a Project Schedule Option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SoloCannotHaveMoreThan1Account</fullName>
        <active>true</active>
        <description>Only allow 1 project account for split type of solo</description>
        <errorConditionFormula>ProjectAccountsCount__c &gt; 1 &amp;&amp; TEXT(SplitType__c) = &quot;Solo&quot; &amp;&amp; NOT(ISCHANGED(SplitType__c))</errorConditionFormula>
        <errorMessage>Project split type &apos;Solo&apos; can not have more than one account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(StartDate__c)</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StoreCallTimeLimitCannotBeNegative</fullName>
        <active>true</active>
        <errorConditionFormula>StoreCallTimeLimit__c &lt; 0</errorConditionFormula>
        <errorMessage>Store Call Time Minutes must be 0 or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidNumberOfDays</fullName>
        <active>true</active>
        <errorConditionFormula>OR(NumberOfDays__c &lt; 1, NumberOfDays__c &gt; ((EndDate__c - StartDate__c) + 1))</errorConditionFormula>
        <errorDisplayField>NumberOfDays__c</errorDisplayField>
        <errorMessage>Please enter a valid number of days within the project window</errorMessage>
    </validationRules>
</CustomObject>